[package]
name = "mintaka"
version = "0.0.5"
description = "Mintaka Framework"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "Apache-2.0"
edition = "2021"
publish = true

[lib]
name = "mintaka"
crate-type = ["rlib"]
path = "src/lib.rs"

[workspace]
resolver = "2"
members = ["src/*"]
exclude = []

[features]
default = ["all"]
all = [
    "config",
    "constants",
    "database",
    "error",
    "fs",
    "http",
    "log",
    "macros",
    "math",
    "serialization",
    "ssl",
    "types",
]
config = ["dep:mintaka-config"]
constants = ["dep:mintaka-constants"]
database = ["dep:mintaka-database"]
error = ["dep:mintaka-error"]
fs = ["dep:mintaka-fs"]
http = ["dep:mintaka-http"]
log = ["dep:mintaka-log"]
macros = ["dep:mintaka-macros"]
math = ["dep:mintaka-math"]
serialization = ["dep:mintaka-serialization"]
ssl = ["dep:mintaka-ssl"]
types = ["dep:mintaka-types"]

[dependencies]
mintaka-config = { version = "0.0.5", path = "src/config", optional = true }
mintaka-constants = { version = "0.0.5", path = "src/constants", optional = true }
mintaka-database = { version = "0.0.5", path = "src/database", optional = true }
mintaka-error = { version = "0.0.5", path = "src/error", optional = true }
mintaka-fs = { version = "0.0.5", path = "src/fs", optional = true }
mintaka-http = { version = "0.0.5", path = "src/http", optional = true }
mintaka-log = { version = "0.0.5", path = "src/log", optional = true }
mintaka-macros = { version = "0.0.5", path = "src/macros", optional = true }
mintaka-math = { version = "0.0.5", path = "src/math", optional = true }
mintaka-serialization = { version = "0.0.5", path = "src/serialization", optional = true }
mintaka-ssl = { version = "0.0.5", path = "src/ssl", optional = true }
mintaka-types = { version = "0.0.5", path = "src/types", optional = true }
