[package]
name = "mintaka-config"
version = "0.0.0"
description = "Mintaka Config"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_config"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-toml = { path = "../serialization/toml" }
mintaka-derive = { path = "../derive" }
mintaka-error = { path = "../error" }
serde = { version = "1.0", features = ["derive"] }
