[package]
name = "mintaka-config"
version = "0.0.5"
description = "Mintaka Config"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_config"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-toml = { version = "0.0.5", path = "../serialization/toml" }
mintaka-derive = { version = "0.0.5", path = "../derive" }
mintaka-error = { version = "0.0.5", path = "../error" }
serde = { version = "1.0", features = ["derive"] }
