[package]
name = "mintaka-constants"
version = "0.0.5"
description = "Mintaka Constants"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_constants"
crate-type = ["rlib"]
path = "lib.rs"

[build-dependencies]
vergen = { version = "=5.1.5", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }
