[package]
name = "mintaka-database"
version = "0.0.5"
description = "Mintaka Database"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_database"
crate-type = ["rlib"]
path = "lib.rs"

[features]
default = ["all", "sea-query"]
all = ["mysql", "postgres", "redis", "sqlite"]
mysql = ["dep:mintaka-mysql"]
postgres = ["dep:mintaka-postgres"]
redis = ["dep:mintaka-redis"]
sqlite = ["dep:mintaka-sqlite"]
sea-query = [
    "dep:sea-query",
    "dep:sea-query-binder",
    "mintaka-mysql/sea-query",
    "mintaka-postgres/sea-query",
    "mintaka-sqlite/sea-query",
]

[dependencies]
mintaka-config = { version = "0.0.5", path = "../config" }
mintaka-error = { version = "0.0.5", path = "../error" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "all-databases",
    "chrono",
    "json",
    "macros",
    "runtime-tokio-rustls",
    "rust_decimal",
    "uuid",
] }
sea-query = { version = "0.30.3", features = [
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], optional = true }
sea-query-binder = { version = "0.5", features = [
    "sqlx-any",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
], optional = true }

mintaka-mysql = { version = "0.0.5", path = "./mysql", optional = true }
mintaka-postgres = { version = "0.0.5", path = "./postgres", optional = true }
mintaka-redis = { version = "0.0.5", path = "./redis", optional = true }
mintaka-sqlite = { version = "0.0.5", path = "./sqlite", optional = true }
