[package]
name = "mintaka-fs"
version = "0.0.5"
description = "Mintaka FS"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_fs"
crate-type = ["rlib"]
path = "lib.rs"

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
dunce = "1.0.4"
mintaka-error = { version = "0.0.5", path = "../error" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs_extra = "1.3.0"
tokio = { version = "1.36.0", features = ["fs"], optional = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
dirs = "5.0.1"
