[package]
name = "mintaka-hal"
version = "0.0.4"
description = "Mintaka HAL"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "mintaka_hal"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.13.0"
sysinfo = "0.30.2"
