[package]
name = "mintaka-http"
version = "0.0.0"
description = "Mintaka Http"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_http"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-config = { path = "../config" }
mintaka-error = { path = "../error" }
serde = { version = "1.0", features = ["derive"] }
