[package]
name = "mintaka-http"
version = "0.0.5"
description = "Mintaka Http"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_http"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-config = { version = "0.0.5", path = "../config" }
mintaka-error = { version = "0.0.5", path = "../error" }
serde = { version = "1.0", features = ["derive"] }
