[package]
name = "mintaka-log"
version = "0.0.5"
description = "Mintaka Log"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_log"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-error = { version = "0.0.5", path = "../error" }
chrono = "0.4.23"
env_logger = "0.10.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
