[package]
name = "mintaka-math"
version = "0.0.0"
description = "Mintaka Math"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_math"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
