[package]
name = "mintaka-serialization"
version = "0.0.5"
description = "Mintaka Serialization"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_serialization"
crate-type = ["rlib"]
path = "lib.rs"

[features]
default = ["all"]
all = ["bincode", "json", "ron", "toml", "xml", "yaml"]
bincode = ["dep:mintaka-bincode"]
json = ["dep:mintaka-json"]
ron = ["dep:mintaka-ron"]
toml = ["dep:mintaka-toml"]
xml = ["dep:mintaka-xml"]
yaml = ["dep:mintaka-yaml"]

[dependencies]
mintaka-bincode = { version = "0.0.5", path = "./bincode", optional = true }
mintaka-json = { version = "0.0.5", path = "./json", optional = true }
mintaka-ron = { version = "0.0.5", path = "./ron", optional = true }
mintaka-toml = { version = "0.0.5", path = "./toml", optional = true }
mintaka-xml = { version = "0.0.5", path = "./xml", optional = true }
mintaka-yaml = { version = "0.0.5", path = "./yaml", optional = true }
