[package]
name = "mintaka-types"
version = "0.0.5"
description = "Mintaka Types"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_types"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-constants = { version = "0.0.5", path = "../constants" }
serde = { version = "1.0", features = ["derive"] }
type-uuid = "0.1.2"
uuid = { version = "1.1.1", features = ["serde", "v1", "v3", "v4", "v5", "v6", "v7", "v8"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.1.1", features = ["js", "v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
