[package]
name = "mintaka-redis"
version = "0.0.5"
description = "Mintaka Redis"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_redis"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
redis = "0.25.2"
