[package]
name = "mintaka-json"
version = "0.0.0"
description = "Mintaka Json"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_json"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-error = { path = "../../error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
