[package]
name = "mintaka-json"
version = "0.0.5"
description = "Mintaka Json"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_json"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
mintaka-error = { version = "0.0.5", path = "../../error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
