[package]
name = "mintaka-xml"
version = "0.0.5"
description = "Mintaka Xml"
repository = "https://github.com/Tribufu/Mintaka"
authors = ["Tribufu <contact@tribufu.com>"]
edition = "2021"
publish = false

[lib]
name = "mintaka_xml"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize", "encoding"] }
